@@ -16,4 +16,17 @@
             ]]>
         </field>
     </record>
+    <record model="ir.ui.view" id="test_modelview_button_view_form">
+        <field name="model">test.modelview.button_depends</field>
+        <field name="type">form</field>
+        <field name="arch" type="xml">
+            <![CDATA[
+            <form>
+                <label name="value"/>
+                <field name="value"/>
+                <button name="test"/>
+            </form>
+            ]]>
+        </field>
+    </record>
 </tryton>
