@@ -1,3 +1,4 @@
+* Remove button if it is not allowed to access some of its dependant fields
 * Add support for Python 3.7
 * Add transactional queue and workers
 * Add __table_handler__ to ModelSQL
